<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu_app">
        <item android:title="@string/more"
            app:showAsAction="ifRoom">
            <menu >
                <item
                    android:id="@+id/action_liveonline"
                    android:title="@string/liveonline"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_native"
                    android:title="@string/nativeSource"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_sample"
                    android:title="@string/sample"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_recent"
                    android:title="@string/recent"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_settings"
                    android:title="@string/settings"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>>


</menu>